[package]
name = "rpmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["rustls-tls-native-roots"] }
rpm = { git="https://github.com/Lunarequest/rpm"}
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tempfile = "3.8.1"
tera = "1.19.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.4.0"
